# logos-omega

./: .gitignore  .rustfmt.toml  ARCHITECTURE.md  Cargo.toml  README.md  TASKS.md  TECH_STACK.md  clippy.toml  dictionary_intermediate.json  justfile
.ai/: DOMAIN_SPEC.md  SYSTEM_PROMPT.md
compilers/logos-parser/: Cargo.toml
compilers/logos-parser/src/: lib.rs  morphology.rs  parser.rs  syntax.rs  token.rs
compilers/logos-solver/: Cargo.toml
compilers/logos-solver/src/: graph.rs  lib.rs  solver.rs
core/logos-ecs/: Cargo.toml
core/logos-ecs/src/: components.rs  lib.rs
core/logos-ecs/src/systems/: agreement.rs
core/logos-morph/: Cargo.toml
core/logos-morph/src/: lib.rs
core/logos-protocol/: Cargo.toml
core/logos-protocol/src/: ids.rs  lib.rs  model.rs  morphology.rs
tools/atlas-compiler/: Cargo.toml
tools/atlas-compiler/src/: main.rs
tools/atlas-pipeline/: debug_header.py  debug_verb.py  debug_word.py  debug_word_full.py  discover_verbs.py  main.py  models.py  requirements.txt  wiktionary.py
tools/atlas-pipeline/data/morphology/: adjectives.yaml  nouns_feminine.yaml  nouns_masculine.yaml  nouns_neuter.yaml  verbs.yaml
