[workspace]
resolver = '2'
members = [
    "core/logos-protocol",
    "core/logos-morph",
    "core/logos-ecs",
    "tools/atlas-compiler",
    "compilers/logos-parser",
    "compilers/logos-solver",
    "platforms/logos-wasm",
    # "compilers/*",
    # "platforms/*",
    # "tools/*"
]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
