[package]
name = "atlas-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
logos-protocol = { path = "../../core/logos-protocol", features = ["serde"] }
rkyv = { version = "0.7", features = ["validation"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
